# sas-SAV

./: .coveragerc  .env.example  .flake8  .gitignore  ANALYSE_COMPLETE_SYSTEME_OKTAGON_SAV.md  AUDIT_PROFOND_PRODUCTION_v10.5.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOY.md  DIAGNOSTIC_SILICON_VALLEY_OKTAGON_SAV.md  DIAGNOSTIC_ULTRA_COMPLET_INTELLIGENCE_IA.md  LICENSE  Makefile  PLAN_ATTAQUE.md  RAPPORT_FINAL_INTELLIGENCE_COMPLETE.md  RAPPORT_REFACTO_V10.5_AUDIT.md  README.md  add_duplicate_check.py  config.py  dashboard.py  dashboard_auth.py  dashboard_chat.py  improved_duplicate_check.py  logger.py  main.py  push_to_github.sh  pyproject.toml  requirements.txt  security.py  sentry_init.py  sentry_init.py.bak  setup.sh
.github/workflows/: tests.yml
_archive/: anti_duplicate.py  final_fix.py  fix_duplicate_api.py  fix_duplicates.py
core/: auto_scoring.py  circuit_breaker.py  client_memory.py  constants.py  conversation_reader.py  emotional_intelligence.py  info_extractor.py  learning.py  lie_detector.py  memory_summarizer.py  metrics.py  models.py  pipeline.py  pipeline.py.bak_pre_v73  retry.py  validators.py
domain/: rules.py
frontend/: mock-server.js  package-lock.json  package.json  vite.config.js
handlers/: __init__.py  address.py  cancellation.py
knowledge/: prompts.py  prompts.py.bak2  templates.py  unified_brain.py
migrations/: migration_v10.5_custom_rules.sql
storage/: database.py  repos.py  schema.py
tenants/: models.py  registry.py
tests/: __init__.py  conftest.py
workers/: followup.py  notifier.py  polling.py  recovery.py  ticket_tracker.py
(+28 files in other folders)
